Fix errors when a keyboard that is not individually addressable is found